[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/characters/fella-001__walk.png" type="Texture" id=1]
[ext_resource path="res://sprites/characters/m4ai__shooting.png" type="Texture" id=2]
[ext_resource path="res://scenes/player.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "shooting",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 30.0

[node name="player" type="Area2D" groups=["player"]]
script = ExtResource( 3 )

[node name="reload_timer" type="Timer" parent="."]
autostart = true

[node name="fella" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "walk"

[node name="m4a1" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 14 )
animation = "shooting"

[node name="hit_zone" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_player_area_entered"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
